objects/Data_Migration_Details__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Filters__c</fullName>
        <inlineHelpText>Provide , separated field API Names</inlineHelpText>
        <label>Additional Filters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_relationship_field__c</fullName>
        <label>Child relationship field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_relationship_name__c</fullName>
        <label>Child relationship name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dynamic_Fields__c</fullName>
        <label>Dynamic Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields_for_Mapping__c</fullName>
        <label>Fields for Mapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fields_to_display__c</fullName>
        <inlineHelpText>Enter field API names by &apos;Comma&apos; separated</inlineHelpText>
        <label>Fields to display</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fields_to_export__c</fullName>
        <label>Fields to export</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentObject</label>
        <referenceTo>Data_Migration_Details__c</referenceTo>
        <relationshipLabel>Related child objects</relationshipLabel>
        <relationshipName>ParentObject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_relationship_field__c</fullName>
        <label>Parent relationship field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_relationship_name__c</fullName>
        <label>Parent relationship name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Data Migration Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Migration Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>